umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@ketcher_aromatic-structures.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  summary:
    sum_formula: C66N2
    atom_count: 68
    bond_count: 75
    property_count: 0
molecule_lenient:
  success: true
  summary:
    sum_formula: C66N2
    atom_count: 68
    bond_count: 75
    property_count: 0
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C66N2
    atom_count: 68
    bond_count: 75
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C66N2
    atom_count: 68
    bond_count: 75
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
